--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Training_model/models_weights/model_43M_32x32_9966.hdf5 filter=lfs diff=lfs merge=lfs -text
 Training_model/models_weights/model_43M_64x64_9984.hdf5 filter=lfs diff=lfs merge=lfs -text
+Training_model/models_weights/model_85M_48x48_9957.hdf5 filter=lfs diff=lfs merge=lfs -text
